process form data dynamically, add success page, add form components

--- a/styles/app.css
+++ b/styles/app.css
@@ -6,6 +6,7 @@
     .zoomOutForPrint { zoom: 0.75; } 
   }
   
+    .max-w-12 { width: 100%;max-width: 12rem; } 
 /* debug css */
 /* * > * {
     background-color: rgba(120, 33, 44 ,0.1);
