--- a/styles/app.css
+++ b/styles/app.css
@@ -2,13 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+    .max-w-4 { width: 100%;max-width: 4rem; } 
+    .max-w-8 { width: 100%;max-width: 8rem; } 
+    .max-w-12 { width: 100%;max-width: 12rem; }
+
+    .resonsive-columns { column-width: 250px; column-gap: 2rem; } 
+    .resonsive-columns > p + p { margin-top: 1em;} 
+
 @media print {
     .zoomOutForPrint { zoom: 0.75; } 
   }
   
-    .max-w-4 { width: 100%;max-width: 4rem; } 
-    .max-w-8 { width: 100%;max-width: 8rem; } 
-    .max-w-12 { width: 100%;max-width: 12rem; } 
 /* debug css */
 /* * > * {
     background-color: rgba(120, 33, 44 ,0.1);
