Sanitize user input before submitting form

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -916,6 +916,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2.25rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-thin {
   font-weight: 100;
 }
